# fast-finds

./: CHANGELOG.md  README.md  fast-finds.cabal
bench/: Main.hs
src/: Findless.hs  Optimise.hs  Syntax.hs
src/Data/Persist/: Vector.hs
src/Data/Persist/HashMap/: Strict.hs
test/: Main.hs
