cabal-version:       2.4

name:                fast-finds
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Persist.HashMap.Strict
                     , Data.Persist.Vector
                     , Findless
                     , Optimise
                     , Syntax
  build-depends:       base ^>=4.13.0.0
                     , bound
                     , containers
                     , deepseq
                     , deriving-compat
                     , persist
                     , text
                     , unordered-containers
                     , vector
                     , vector-builder
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

benchmark fast-finds-bench
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base ^>=4.13.0.0
                     , bound
                     , bytestring
                     , criterion
                     , deepseq
                     , fast-finds
                     , persist
                     , random
                     , text
                     , unordered-containers
                     , vector
  hs-source-dirs:      bench
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite fast-finds-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0
                     , bound
                     , fast-finds
                     , hspec
                     , text
  ghc-options:         -Wall -Werror
